--- a/css/styles.css
+++ b/css/styles.css
@@ -263,6 +263,9 @@ a.link {
     width: 528px;
     height: 581px;
 
+    padding: 40px;
+
+
     border-radius: 4px;
     background-color: var(--button-text);
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2),
@@ -270,7 +273,9 @@ a.link {
                 0px 1px 3px rgba(0, 0, 0, 0.12);
 
     
+
 }
+
 .button-close {
     position: absolute;
     top: 8px;
@@ -278,6 +283,7 @@ a.link {
 
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     padding: 0;
     margin: 0;
 
@@ -286,20 +292,174 @@ a.link {
 
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-
+    background-color: #FFFFFF;
     cursor: pointer;
 
+    transition-property: background-color;
+        transition: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
 
 }
 .close {
+    display: flex;
     fill: #000000;
 }
+.close:hover,
+.close:focus {
+    fill: var(--accent-color);
+}
+/*form Hero*/
 
+.hero-form > b {
+    display: inline-block;
+    margin-bottom: 12px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    color: var(--title-text-color);
+}
+.form-input {
+    
+    display: block;
+    width: 100%;
+    height: 40px;
+
+    margin-top: 4px;
+    margin-bottom: 10px;
+    padding-left: 38px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    transition-property: background-color;
+        transition: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+
+
+}
+.form-input:focus,
+.form-input:hover, 
+.form-input:focus + .icon-input,
+.form-input:hover +.icon-input {
+    border-color: var(--accent-color);
+    fill: var(--accent-color);
+    color: var(--accent-color);
+
+    transition-property: background-color;
+        transition: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+
+}
+.input-comment {
+    padding: 12px 16px;
+    margin-bottom: 20px;
+
+    height: 120px;
+    width: 448px;
+    resize: none;
+}
+.icon-name {
+    position: absolute;
+    left: 52px;
+    top: 104px;
+
+
+}
+.icon-phone {
+    position: absolute;
+    left: 52px;
+    top: 172px;
+}
+.icon-email-black {
+    position: absolute;
+    left: 52px;
+    top: 240px;
+}
 .feature {
     padding-top: 94px;
     padding-bottom: 94px;
 
     
+}
+
+.form-field {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+}
+
+.form-submit-button {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 200px;
+    height: 50px;
+    
+    margin-top: 30px;
+
+    background-color: var(--accent-color);
+    color: var(--button-text);
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    font-weight: 700;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+
+    cursor: pointer;
+}
+
+.policy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+}
+.policy-link {
+    color: var(--accent-color);
+}
+.checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+
+}
+.icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+
+    border: 1px solid #212121;
+    border-radius: 2px;
+    transition-property: background-color;
+        transition: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+
+}
+.checkbox:checked + .icon {
+    border-color: transparent;
+    background-color: #2196F3;
+    background-image: url(../icons/iconcheck.svg);
+    background-size: contain;
+    background-origin: border-box;
+    transition-property: background-color;
+        transition: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
 }
 
 h2,
@@ -689,10 +849,27 @@ footer {
 }
 .input-submit {
     margin-right: 12px;
+    padding-left: 16px;
+
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+
+
+    color: rgba(255, 255, 255, 0.6);
+
+    background-color: var(--tertiary-bg-color);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
 
     width: 358px;
     height: 50px;
 
+}
+.input-submit:hover,
+.input-submit:focus {
+    border-color: var(--accent-color);
 }
 .text-submit {
     font-size: 14px;
@@ -721,13 +898,14 @@ footer {
     line-height: 1.88;
     
     color: var(--button-text);
-    letter-spacing: 0.06;
+    letter-spacing: 0.06em;
 
 
 }
 .icon-send {
     display: inline-block;
     margin-left: 10px;
+    fill: #FFFFFF;
 }
 /*portfolio*/
 .filtr {
